--- a/pages/admin/admin-panel.html
+++ b/pages/admin/admin-panel.html
@@ -20,6 +20,7 @@
     <script src="../../scripts/admin/users-scripts.js" defer></script>
     <script src="../../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../../scripts/general-scripts/logoutUser.js" defer></script>
+    <link rel="stylesheet" href="../../styles/general-styles.css">
     <link rel="stylesheet" href="../../styles/admin-styles.css" />
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Administracion</title>
@@ -29,7 +30,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark py-0">
         <div class="container-fluid">
           <div class="d-flex border-end py-3">
-            <img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="45" height="" class="d-inline-block align-text-top" />
+            <img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="45" class="d-inline-block align-text-top" />
             <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
           </div>
           <button
@@ -47,7 +48,7 @@
             <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" aria-current="page" href="../../index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link" href="../contact.html">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="../about-us.html">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <div id="admin-item">
@@ -66,7 +67,7 @@
     </header>
     <main class="my-4">
       <section class="admin-panel-section">
-				<div class="admin-panel-container container">
+				<div class="admin-panel-container general-container container">
           <div class="row">
             <!-- ADMIN PANEL OPTIONS -->
             <div class="admin-aside-col col col-sm-12 col-lg-2 p-0 pb-4 pb-lg-0">
@@ -403,7 +404,7 @@
         <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
       </div>
       <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
-        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="100"></a>
+        <a href="../../index.html" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
       </div>
       <div class="nav col-md-3 me-3 justify-content-end">
         <ul class="d-flex flex-row mb-0 list-unstyled">
