--- a/pages/login-register.html
+++ b/pages/login-register.html
@@ -19,6 +19,7 @@
     <script type="module" src="/scripts/login-register/login-register.js" defer></script>
     <script src="../../scripts/general-scripts/sessionChecks.js" defer></script>
     <script src="../scripts/general-scripts/logoutUser.js" defer></script>
+    <link rel="stylesheet" href="../../styles/general-styles.css">
     <link rel="stylesheet" href="../styles/login-register-styles.css" />
     <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
     <title>Acceder</title>
@@ -28,7 +29,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark py-0">
         <div class="container-fluid">
           <div class="d-flex border-end py-3">
-            <img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="45" height="" class="d-inline-block align-text-top">
+            <img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="45" height="" class="d-inline-block align-text-top">
             <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
           </div>
           <button
@@ -45,18 +46,18 @@
           <div class="collapse navbar-collapse ps-2" id="navbarSupportedContent">
             <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" aria-current="page" href="/index.html">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+              <li class="nav-item"><a class="nav-link" href="./contact.html">Contacto</a></li>
+              <li class="nav-item"><a class="nav-link" href="./about-us.html">Nosotros</a></li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
               <div id="admin-item">
-                <li class="nav-item"><a class="nav-link" href="#">Admin</a></li>
+                <li class="nav-item"><a class="nav-link" href="./admin/admin-panel.html">Admin</a></li>
               </div>
               <div id="logout-item">
                 <li class="nav-item"><a href="../index.html" id="logout-link" class="nav-link text-danger" onclick="logoutUser()">Salir</a></li>
               </div>
               <div id="login-item">
-                <li class="nav-item"><a class="nav-link active" href="#">Ingresar</a></li>
+                <li class="nav-item"><a class="nav-link active" href="./login-register.html">Ingresar</a></li>
               </div>
             </ul>
           </div>
@@ -66,7 +67,7 @@
     <main class="my-4">
       <div class="container access-container">
         <div class="access-row row d-flex justify-content-center align-items-center">
-          <div class="login-section col col-4 px-5 py-4 d-block" id="login-section">
+          <div class="login-section general-container col col-4 px-5 py-4 d-block" id="login-section">
             <h2 class="mb-3 mt-2">Acceder:</h2>
             <form class="mb-4" id="login-form">
               <div class="input-control mb-3">
@@ -90,7 +91,7 @@
             </form>
             <p class="text-center">No tienes cuenta?<button class="btn btn-link px-1" id="register-link">Registrate aqui.</button></p>
           </div>
-          <div class="register-section col col-4 px-5 pt-4 pb-3 d-none" id="register-section">
+          <div class="register-section general-container col col-4 px-5 pt-4 pb-3 d-none" id="register-section">
             <h2 class="mb-3 mt-2">Registrate:</h2>
             <form class="mb-4" id="register-form">
               <div class="input-control mb-3">
@@ -132,7 +133,7 @@
         <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
       </div>
       <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
-        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="100"></a>
+        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="page logo" width="100"></a>
       </div>
       <div class="nav col-md-3 me-3 justify-content-end">
         <ul class="d-flex flex-row mb-0 list-unstyled">
